@@ -12,7 +12,7 @@ class TLSession(object):
         self.__tcount = 0
     def get_connection(self, close_with_result=False):
         try:
-            return self.__transaction
+            return self.__transaction._increment_connect()
         except AttributeError:
             return TLConnection(self, close_with_result=close_with_result)
     def set_transaction(self, tlconnection, trans):
@@ -38,13 +38,13 @@ class TLSession(object):
     def rollback(self):
         if self.__tcount > 0:
             try:
-                self.__trans.rollback()
+                self.__trans._rollback_impl()
             finally:
                 self.reset()
     def commit(self):
         if self.__tcount == 1:
             try:
-                self.__trans.commit()
+                self.__trans._commit_impl()
             finally:
                 self.reset()
         elif self.__tcount > 1:
@@ -56,25 +56,31 @@ class TLConnection(base.Connection):
     def __init__(self, session, close_with_result):
         base.Connection.__init__(self, session.engine, close_with_result=close_with_result)
         self.__session = session
+        self.__opencount = 1
     session = property(lambda s:s.__session)
+    def _increment_connect(self):
+        self.__opencount += 1
+        return self
     def _create_transaction(self, parent):
         return TLTransaction(self, parent)
     def _begin(self):
         return base.Connection.begin(self)
     def begin(self):
-        trans = base.Connection.begin(self)
-        self.__session.set_transaction(self, trans)
-        return trans
-
+        return self.session.begin()
+    def close(self):
+        if self.__opencount == 1:
+            base.Connection.close(self)
+        self.__opencount -= 1
+        
 class TLTransaction(base.Transaction):
-    def commit(self):
+    def _commit_impl(self):
         base.Transaction.commit(self)
-        if not self.is_active:
-            self.connection.session.reset()
-    def rollback(self):
+    def _rollback_impl(self):
         base.Transaction.rollback(self)
-        if not self.is_active:
-            self.connection.session.reset()
+    def commit(self):
+        self.connection.session.commit()
+    def rollback(self):
+        self.connection.session.rollback()
             
 class TLEngine(base.ComposedSQLEngine):
     """a ComposedSQLEngine that includes support for thread-local managed transactions.  This engine
